#4 actualizando transacción de registro de proyecto y comenzando con actualización
