# models/proyecto_academico_institucion.go
@@ -27,7 +27,7 @@ type ProyectoAcademicoInstitucion struct {
 	FechaCreacion            time.Time       `orm:"column(fecha_creacion);type(timestamp without time zone);auto_now_add"`
 	FechaModificacion        time.Time       `orm:"column(fecha_modificacion);type(timestamp without time zone);auto_now"`
 	UnidadTiempoId           int             `orm:"column(unidad_tiempo_id)"`
-	AnoActoAdministrativo    string          `orm:"column(ano_acto_administrativo)"`
+	AnoActoAdministrativoId  string          `orm:"column(ano_acto_administrativo_id)"`
 	DependenciaId            int             `orm:"column(dependencia_id)"`
 	AreaConocimientoId       int             `orm:"column(area_conocimiento_id)"`
 	NucleoBaseId             int             `orm:"column(nucleo_base_id)"`
